# batchgenerators

./: .arcconfig  .gitignore  .travis.yml  LICENSE  Makefile  README.md  Readme.md  pyproject.toml  requirements.txt  setup.py
DeepLearningBatchGeneratorUtils/: ChannelSelectionGenerators.py  ColorAugmentationGenerators.py  CropAndPadGenerators.py  DataAugmentationGenerators.py  DataGeneratorBase.py  InvertibleGenerators.py  MultiThreadedGenerator.py  NoiseGenerators.py  ResamplingAugmentationGenerators.py  SampleNormalizationGenerators.py  SpatialTransformGenerators.py  UtilityGenerators.py  __init__.py  examples.py  tmp.py  util_generators.py  utils.py
DeepLearningBatchGeneratorUtils/tests/: MockBatchGenerator.py  test_BatchGeneratorBase.py  test_invertible_rotation.py  test_multithreading.py
batchgenerators/: NoiseGenerators.py  ResamplingAugmentationGenerators.py  SampleNormalizationGenerators.py  SpatialTransformGenerators.py  UtilityGenerators.py  __init__.py
batchgenerators/augmentations/: __init__.py  color_augmentations.py  crop_and_pad_augmentations.py  noise_augmentations.py  normalizations.py  resample_augmentations.py  spatial_transformations.py  utils.py
batchgenerators/dataloading/: __init__.py  data_loader.py  fast_multi_threaded_augmenter.py  minimalist_example.py  multi_threaded_augmenter.py  nondet_multi_threaded_augmenter.py  single_threaded_augmenter.py
batchgenerators/datasets/: cifar.py
batchgenerators/examples/: brats_2017_preprocessing.py  cifar10.py  example.py  example_ipynb.ipynb  example_transforms.py  multithreaded_dataloading.py  multithreaded_with_batches.ipynb
batchgenerators/generators/: __init__.py  channel_selection_generators.py  color_augmentation_generators.py  crop_and_pad_generators.py  data_generator_base.py  invertible_rotation_generator.py  multi_threaded_generator.py  noise_generators.py  resampling_augmentation_generators.py  sample_normalization_generators.py  spatial_transform_generators.py  utility_generators.py
batchgenerators/tests/: DataGenerators.py  MockBatchGenerator.py  _MockBatchGenerator.py  _test_BatchGeneratorBase.py  _test_invertible_rotation.py  _test_multithreading.py  _test_random_crop.py  test_BatchGeneratorBase.py  test_DataLoader.py  test_augment_contrast.py  test_augment_zoom.py  test_axis_mirroring.py  test_color_augmentations.py  test_crop.py  test_invertible_rotation.py  test_multithreaded_augmenter.py  test_multithreading.py  test_normalizations.py  test_random_crop.py  test_sanity.py  (+2 more)
tests/: DataGenerators.py  _test_BatchGeneratorBase.py  test_DataLoader.py  test_augment_zoom.py  test_axis_mirroring.py  test_color_augmentations.py  test_crop.py  test_multithreaded_augmenter.py  test_normalizations.py  test_random_crop.py  test_resample_augmentations.py  test_sanity.py  test_spatial_transformations.py
(+21 files in other folders)
