[tool.poetry]
name = "batchgenerators"
version = "0.21"
description = "Data augmentation toolkit"
authors = ["Division of Medical Image Computing, German Cancer Research Center <f.isensee@dkfz-heidelberg.de>"]
license = "Apache License Version 2.0, January 2004"
readme = "Readme.md"
repository = "https://github.com/MIC-DKFZ/batchgenerators"
keywords=[
    'deep learning',
    'image segmentation',
    'image classification',
    'medical image analysis',
    'medical image segmentation',
    'data augmentation'
]

[tool.poetry.dependencies]
python = "^3.7"
Pillow = ">=7.1.2"
numpy = ">=1.10.2"
scipy = "*"
scikit-image = "*"
scikit-learn = "*"
future = "*"
threadpoolctl = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
Sphinx = "^3.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
