[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batchgenerators"
version = "0.25.2"
description = "Data augmentation toolkit"
readme = "README.md"
authors = [
    {name = "Division of Medical Image Computing, German Cancer Research Center AND Applied Computer Vision Lab, Helmholtz Imaging Platform", email = "f.isensee@dkfz-heidelberg.de"}
]
license = {text = "Apache License Version 2.0, January 2004"}
keywords = [
    "data augmentation", "deep learning", "image segmentation", 
    "image classification", "medical image analysis", 
    "medical image segmentation"
]
dependencies = [
    "numpy>=1.10.2",
    "pandas",
    "pillow>=7.1.2",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "threadpoolctl"
]

[project.urls]
homepage = "https://github.com/MIC-DKFZ/batchgenerators"

[tool.setuptools.packages.find]
exclude = ["tests"]
